added a couple of new files to ignore that added on after moving to external hard drive

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ rsconnect/
 
 # For Mac users computer specific files
 **/.DS_Store
-
+**/._.DS_Store
+**/._PCN-FireSynthesis.Rproj
 # exclude specific folders from push to github
 figures/*
 images/*
