--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ rsconnect/
 # For Mac users computer specific files
 **/.DS_Store
 **/._.DS_Store
+**/scripts/._FiguresPredictedvsMeasured.Rmd
 **/._PCN-FireSynthesis.Rproj
 # exclude specific folders from push to github
 figures/*
